pixel perfect index

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Интернет-магазин «Техномарт»</title>
     <link rel="stylesheet"  href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -71,8 +71,8 @@
             <strong>Дрели</strong>
             <span>Соседям на радость</span>
             <a href="#" class="drill-tools">Открыть каталог</a>
-            <button class="button gallery-button gallery-button-back" type="button"><img src="img/icon-left.svg" width="22" height="40"></button>
-            <button class="button gallery-button gallery-button-next" type="button"><img src="img/icon-right.svg" width="22" height="40"></button>
+            <button class="button gallery-button gallery-button-back" type="button"><img src="img/icon-left.svg" width="22" height="40" alt="Предыдущая категория"></button>
+            <button class="button gallery-button gallery-button-next" type="button"><img src="img/icon-right.svg" width="22" height="40" alt="Следующая категория"></button>
           </li>
           <li class="special-offer">
             <div class="discount-group">
@@ -94,12 +94,12 @@
         <ul class="catalog-list-popular">
           <li class="catalog-item">
             <div class="catalog-item-image">
-              <img src="img/product-10.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 9000">
+              <img src="img/product-10.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 9000">
             </div>
-            <a href="catalog-item10.html" class="catalog-item-title">Перфоратор Bosh BFG 9000</a>
+            <a href="catalog-item10.html" class="catalog-item-title">Перфоратор BOSCH BFG 9000</a>
             <p class="catalog-item-price">
-              <span class="old-price">32 500₽</span>
-              <a href="#" class="button-buy">25 500₽</a>
+              <span class="old-price">32500₽.</span>
+              <a href="#" class="button-buy">25500₽.</a>
             </p>
             <div class="actions">
               <a class="buy-now" href="#">Купить</a>
@@ -108,12 +108,12 @@
           </li>
           <li class="catalog-item">
             <div class="catalog-item-image">
-              <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 3000">
+              <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
             </div>
-            <a href="catalog-item1.html" class="catalog-item-title">Перфоратор Bosh BFG 3000</a>
+            <a href="catalog-item1.html" class="catalog-item-title">Перфоратор BOSCH BFG 3000</a>
             <p class="catalog-item-price">
-              <span class="old-price">22 500₽</span>
-              <a href="#" class="button-buy">15 500₽</a>
+              <span class="old-price">22500₽.</span>
+              <a href="#" class="button-buy">15500₽.</a>
             </p>
             <div class="actions">
               <a class="buy-now" href="#">Купить</a>
@@ -122,12 +122,12 @@
           </li>
           <li class="catalog-item">
             <div class="catalog-item-image">
-              <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 6000">
+              <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
             </div>
-            <a href="catalog-item2.html" class="catalog-item-title">Перфоратор Bosh BFG 6000</a>
+            <a href="catalog-item2.html" class="catalog-item-title">Перфоратор BOSCH BFG 6000</a>
             <p class="catalog-item-price">
-              <span class="old-price">30 500₽</span>
-              <a href="#" class="button-buy">25 500₽</a>
+              <span class="old-price">30500₽.</span>
+              <a href="#" class="button-buy">25500₽.</a>
             </p>
             <div class="actions">
               <a class="buy-now" href="#">Купить</a>
@@ -136,12 +136,12 @@
           </li>
           <li class="catalog-item catalog-new-item">
             <div class="catalog-item-image">
-              <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 2000">
+              <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
             </div>
-            <a href="catalog-item3.html" class="catalog-item-title">Перфоратор Bosh BFG 2000</a>
+            <a href="catalog-item3.html" class="catalog-item-title">Перфоратор BOSCH BFG 2000</a>
             <p class="catalog-item-price">
               <span class="old-price"></span>
-              <a href="#" class="button-buy">12 500₽</a>
+              <a href="#" class="button-buy">12500₽.</a>
             </p>
             <div class="actions">
               <a class="buy-now" href="#">Купить</a>
@@ -157,7 +157,7 @@
         </div>
         <ul class="popular-maker-list">
           <li class="popular-maker-item">
-            <a href="#"><img src="img/bosch-logo.png" width="126" height="37" alt="Инструмент производства Bosch"></a>
+            <a href="#"><img src="img/bosch-logo.png" width="126" height="37" alt="Инструмент производства BOSCH"></a>
           </li>
           <li class="popular-maker-item">
             <a href="#"><img src="img/makita-logo.png" width="123" height="40" alt="Инструмент производства Makita"></a>
@@ -198,7 +198,7 @@
             </ul>
             <section class="service-delivery">
               <h3>Доставка</h3>
-              <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+              <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<span>Ведь мы неплохо заработаем, поднимая его на ваш этаж!</span></p>
             </section>
           </div>
         </section>
@@ -206,7 +206,7 @@
       <div class="dilivery-contacts container">
         <section class="features">
           <h2 class="visually-hidden">Преимущества техномарта</h2>
-          <h3>Компания Техномарт</h3>
+          <h3>Компания «Техномарт»</h3>
           <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит любителей сэкономить на гастарбайтерах</p>
           <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
           <div class="transport-list-wrapper">
@@ -239,7 +239,7 @@
           <li><a href="Contacts.html">Контакты</a></li>
         </ul>
         <p class="footer-contacts">г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8<br>
-        +7(812)555-05-55
+        +7 (812)555-05-55
         </p>
         <ul class="footer-secondary-nav">
           <li><a href="#">Материалы</a></li>
@@ -287,7 +287,7 @@
               </div>
               <div class="modal-wrapper modal-wrapper-email">
                 <label for="user-email">Ваш e-mail:</label>
-                <input class="user-email" id="user-email" type="e-mail" name="user-email" placeholder="email@example.com">
+                <input class="user-email" id="user-email" type="email" name="user-email" placeholder="email@example.com">
               </div>
             </div>
             <div class="modal-wrapper modal-wrapper-message">
