--- a/catalog.html
+++ b/catalog.html
@@ -129,12 +129,12 @@
               <ul class="catalog-list">
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 3000">
+                    <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
                   </div>
-                  <a href="catalog-item1.html" class="catalog-item-title">Перфоратор Bosh BFG 3000</a>
+                  <a href="catalog-item1.html" class="catalog-item-title">Перфоратор BOSCH BFG 3000</a>
                   <p class="catalog-item-price">
-                    <span class="old-price">22 500₽</span>
-                    <a href="#" class="button-buy">15 500₽</a>
+                    <span class="old-price">22500₽.</span>
+                    <a href="#" class="button-buy">15500₽.</a>
                   </p>
                   <div class="actions">
                     <a class="buy-now" href="#">Купить</a>
@@ -143,12 +143,12 @@
                 </li>
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 6000">
+                    <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
                   </div>
-                  <a href="catalog-item2.html" class="catalog-item-title">Перфоратор Bosh BFG 6000</a>
+                  <a href="catalog-item2.html" class="catalog-item-title">Перфоратор BOSCH BFG 6000</a>
                   <p class="catalog-item-price">
-                    <span class="old-price">30 500₽</span>
-                    <a href="#" class="button-buy">25 500₽</a>
+                    <span class="old-price">30500₽.</span>
+                    <a href="#" class="button-buy">25500₽.</a>
                   </p>
                   <div class="actions">
                     <a class="buy-now" href="#">Купить</a>
@@ -157,12 +157,12 @@
                 </li>
                 <li class="catalog-item catalog-new-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 2000">
+                    <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
                   </div>
-                  <a href="catalog-item3.html" class="catalog-item-title">Перфоратор Bosh BFG 2000</a>
+                  <a href="catalog-item3.html" class="catalog-item-title">Перфоратор BOSCH BFG 2000</a>
                   <p class="catalog-item-price">
                     <span class="old-price"></span>
-                    <a href="#" class="button-buy">12 500₽</a>
+                    <a href="#" class="button-buy">12500₽.</a>
                   </p>
                   <div class="actions">
                     <a class="buy-now" href="#">Купить</a>
@@ -171,12 +171,12 @@
                 </li>
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 3000">
+                    <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
                   </div>
-                  <a href="catalog-item1.html" class="catalog-item-title">Перфоратор Bosh BFG 3000</a>
+                  <a href="catalog-item1.html" class="catalog-item-title">Перфоратор BOSCH BFG 3000</a>
                   <p class="catalog-item-price">
-                    <span class="old-price">22 500₽</span>
-                    <a href="#" class="button-buy">15 500₽</a>
+                    <span class="old-price">22500₽.</span>
+                    <a href="#" class="button-buy">15500₽.</a>
                   </p>
                   <div class="actions">
                     <a class="buy-now" href="#">Купить</a>
@@ -185,12 +185,12 @@
                 </li>
                 <li class="catalog-item  catalog-new-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 6000">
+                    <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
                   </div>
-                  <a href="catalog-item2.html" class="catalog-item-title">Перфоратор Bosh BFG 6000</a>
+                  <a href="catalog-item2.html" class="catalog-item-title">Перфоратор BOSCH BFG 6000</a>
                   <p class="catalog-item-price">
-                    <span class="old-price">30 500₽</span>
-                    <a href="#" class="button-buy">25 500₽</a>
+                    <span class="old-price">30500₽.</span>
+                    <a href="#" class="button-buy">25500₽.</a>
                   </p>
                   <div class="actions">
                     <a class="buy-now" href="#">Купить</a>
@@ -199,12 +199,12 @@
                 </li>
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 2000">
+                    <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
                   </div>
-                  <a href="catalog-item3.html" class="catalog-item-title">Перфоратор Bosh BFG 2000</a>
+                  <a href="catalog-item3.html" class="catalog-item-title">Перфоратор BOSCH BFG 2000</a>
                   <p class="catalog-item-price">
                     <span class="old-price"></span>
-                    <a href="#" class="button-buy">12 500₽</a>
+                    <a href="#" class="button-buy">12500₽.</a>
                   </p>
                   <div class="actions">
                     <a class="buy-now" href="#">Купить</a>
@@ -213,12 +213,12 @@
                 </li> 
                 <li class="catalog-item catalog-new-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 3000">
+                    <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
                   </div>
-                  <a href="catalog-item1.html" class="catalog-item-title">Перфоратор Bosh BFG 3000</a>
+                  <a href="catalog-item1.html" class="catalog-item-title">Перфоратор BOSCH BFG 3000</a>
                   <p class="catalog-item-price">
-                    <span class="old-price">22 500₽</span>
-                    <a href="#" class="button-buy">15 500₽</a>
+                    <span class="old-price">22500₽.</span>
+                    <a href="#" class="button-buy">15500₽.</a>
                   </p>
                   <div class="actions">
                     <a class="buy-now" href="#">Купить</a>
@@ -227,12 +227,12 @@
                 </li>
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 6000">
+                    <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
                   </div>
-                  <a href="catalog-item2.html" class="catalog-item-title">Перфоратор Bosh BFG 6000</a>
+                  <a href="catalog-item2.html" class="catalog-item-title">Перфоратор BOSCH BFG 6000</a>
                   <p class="catalog-item-price">
-                    <span class="old-price">30 500₽</span>
-                    <a href="#" class="button-buy">25 500₽</a>
+                    <span class="old-price">30500₽.</span>
+                    <a href="#" class="button-buy">25500₽.</a>
                   </p>
                   <div class="actions">
                     <a class="buy-now" href="#">Купить</a>
@@ -241,12 +241,12 @@
                 </li>
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 2000">
+                    <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
                   </div>
-                  <a href="catalog-item3.html" class="catalog-item-title">Перфоратор Bosh BFG 2000</a>
+                  <a href="catalog-item3.html" class="catalog-item-title">Перфоратор BOSCH BFG 2000</a>
                   <p class="catalog-item-price">
                     <span class="old-price"></span>
-                    <a href="#" class="button-buy">12 500₽</a>
+                    <a href="#" class="button-buy">12500₽.</a>
                   </p>
                   <div class="actions">
                     <a class="buy-now" href="#">Купить</a>
