pp catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -5,8 +5,8 @@
     <title>Каталог интернет-магазина «Техномарт»</title>
     <link rel="stylesheet"  href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
   </head>
   <body>
     <header class="inner-header">
@@ -22,7 +22,7 @@
             </label>
           </form>
           <a href="bookmarks.html" class="header-link header-bookmarks">Закладки: 0</a>
-          <a href="cart.html" class="header-link header-cart">Корзина: 0</a>
+          <a href="cart.html" class="header-link header-cart">Корзина: 10</a>
           <a href="order.html" class="header-order">Оформить заказ</a>
         </div>
       </section>
@@ -32,7 +32,7 @@
           <span>+7 (812) 555-05-55</span><br>г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8
         </p>
         <ul class="user-navigation">
-          <li class="user-name-menu"><a class="user-name" href="#">Равшан Джамшудович</a>
+          <li class="user-name-menu"><a class="user-name" href="#">Равшан Джамшутович</a>
             <a class="sing-out" href="#" aria-label="Выйти">
             </a>
           </li>  
@@ -69,6 +69,8 @@
             <form class="filters" method="get">
               <fieldset>
                 <legend>Цена:</legend>
+                <div class="range-price">
+                </div>
               </fieldset>
               <fieldset>
                 <legend>Производители:</legend>
@@ -297,7 +299,7 @@
       <div class="footer-wrapper">
         <section class="rights-social-copyright container">
           <p class="footer-rights">
-          2010-2019 Компания «Техномарт»<br>
+          © 2010-2019 Компания «Техномарт»<br>
           Все права защищены
           </p>
           <ul class="social">
