--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
           <div class="transport-list-wrapper">
             <ul class="transport-list">
-              <li>Деловые Линии</li>
+              <li>Деловые линии</li>
               <li>Автотрейдинг</li>
               <li>ЖелДорЭкспедиция</li>
             </ul>
@@ -251,7 +251,7 @@
       <div class="footer-wrapper">
         <section class="rights-social-copyright container">
           <p class="footer-rights">
-          2010-2019 Компания «Техномарт»<br>
+          © 2010-2019 Компания «Техномарт»<br>
           Все права защищены
           </p>
           <ul class="social">
@@ -418,9 +418,7 @@
               localStorage.setItem("userEmail", userEmail.value);
             }            
           }
-        });
-        
-
+        }); 
       </script>
   </body>
 </html>
