--- a/catalog.html
+++ b/catalog.html
@@ -70,6 +70,12 @@
               <fieldset>
                 <legend>Цена:</legend>
                 <div class="range-price">
+                  <span class="min-price"></span>
+                  <span class="max-price"></span>
+                </div>
+                <div class="price-selection">
+                  <output class="min-price-value">0</output>
+                  <output class="max-price-value">30000</output>
                 </div>
               </fieldset>
               <fieldset>
