--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <strong>Техника</strong>
             <a href="#" class="catalog-button">для стройки</a>
           </li>
+          <!-- Slider-->
           <li class="drill-group">
             <strong>Дрели</strong>
             <span>Соседям на радость</span>
@@ -74,6 +75,7 @@
             <button class="button gallery-button gallery-button-back" type="button"><img src="img/icon-left.svg" width="22" height="40" alt="Предыдущая категория"></button>
             <button class="button gallery-button gallery-button-next" type="button"><img src="img/icon-right.svg" width="22" height="40" alt="Следующая категория"></button>
           </li>
+          <!-- Slider-->
           <li class="special-offer">
             <div class="discount-group">
               <strong>Скидки 50%</strong>
