сортировка по цене, разметка слайдеров

--- a/index.html
+++ b/index.html
@@ -68,12 +68,27 @@
             <a href="#" class="catalog-button">для стройки</a>
           </li>
           <!-- Slider-->
-          <li class="drill-group">
-            <strong>Дрели</strong>
-            <span>Соседям на радость</span>
-            <a href="#" class="drill-tools">Открыть каталог</a>
-            <button class="button gallery-button gallery-button-back" type="button"><img src="img/icon-left.svg" width="22" height="40" alt="Предыдущая категория"></button>
-            <button class="button gallery-button gallery-button-next" type="button"><img src="img/icon-right.svg" width="22" height="40" alt="Следующая категория"></button>
+          <li class="slider">
+            <div class="slider-controls">
+              <span></span>
+              <span class="active"></span>
+            </div>
+            <ul class="slider-list">
+              <li class="drill-group">
+                <strong>Дрели</strong>
+                <span>Соседям на радость</span>
+                <a href="#" class="drill-tools">Открыть каталог</a>
+                <button class="button gallery-button gallery-button-back" type="button"><img src="img/icon-left.svg" width="22" height="40" alt="Предыдущая категория"></button>
+                <button class="button gallery-button gallery-button-next" type="button"><img src="img/icon-right.svg" width="22" height="40" alt="Следующая категория"></button>
+              </li>
+              <li class="perforator-group">
+                <strong>Перфораторы</strong>
+                <span>Настоящие мужские игрушки</span>
+                <a href="#" class="perforator-tools">Открыть каталог</a>
+                <button class="button gallery-button gallery-button-back" type="button"><img src="img/icon-left.svg" width="22" height="40" alt="Предыдущая категория"></button>
+                <button class="button gallery-button gallery-button-next" type="button"><img src="img/icon-right.svg" width="22" height="40" alt="Следующая категория"></button>
+              </li>
+            </ul>
           </li>
           <!-- Slider-->
           <li class="special-offer">
@@ -201,6 +216,15 @@
             <section class="service-delivery">
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<span>Ведь мы неплохо заработаем, поднимая его на ваш этаж!</span></p>
+            </section>
+            <section class="service-guarantee">
+              <h3>Гарантия</h3>
+              <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br>Дом уж восстановите как-нибудь сами</p>
+            </section>
+            <section class="service-loan">
+              <h3>Кредит</h3>
+              <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+              <a href="#">Отправить заявку</a>
             </section>
           </div>
         </section>
