--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <header class="inner-header">
       <section class="header-top-menu">
         <div class="header-top-content container">
-          <a class="main-header-logo">
+          <a href="index.html" class="main-header-logo">
             <img src="img/logo.svg" width="110px" height="17px" alt="Логотип интернет-магазина «Техномарт»">
           </a>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
@@ -22,7 +22,7 @@
             </label>
           </form>
           <a href="bookmarks.html" class="header-link header-bookmarks">Закладки: 0</a>
-          <a href="cart.html" class="header-link header-cart">Корзина: 10</a>
+          <a href="cart.html" class="header-link header-cart full-cart">Корзина: 10</a>
           <a href="order.html" class="header-order">Оформить заказ</a>
         </div>
       </section>
@@ -282,7 +282,7 @@
     </main>
     <footer  class="main-footer">
       <section class="footer-menu container">
-        <a class="footer-logo">
+        <a href="index.html" class="footer-logo">
           <img src="img/logo.svg" width="136px" height="22px" alt="Логотип интернет-магазина «Техномарт»">
         </a>
         <ul class="footer-top-nav">
