--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <section class="service-loan">
               <h3>Кредит</h3>
               <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-              <a href="#">Отправить заявку</a>
+              <a href="#" class="botton">Отправить заявку</a>
             </section>
           </div>
         </section>
@@ -231,7 +231,7 @@
         <section class="features">
           <h2 class="visually-hidden">Преимущества техномарта</h2>
           <h3>Компания «Техномарт»</h3>
-          <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит любителей сэкономить на гастарбайтерах</p>
+          <p>Настоящий мужской шопинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах</p>
           <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
           <div class="transport-list-wrapper">
             <ul class="transport-list">
