--- a/catalog.html
+++ b/catalog.html
@@ -13,13 +13,11 @@
       <section class="header-top-menu">
         <div class="header-top-content container">
           <a href="index.html" class="main-header-logo">
-            <img src="img/logo.svg" width="110px" height="17px" alt="Логотип интернет-магазина «Техномарт»">
+            <img src="img/logo.svg" width="110" height="17" alt="Логотип интернет-магазина «Техномарт»">
           </a>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-            <label>
               <input type="search" name="search-form" placeholder="Поиск:">
               <button type="submit" class="search-form-btn"></button>
-            </label>
           </form>
           <a href="bookmarks.html" class="header-link header-bookmarks">Закладки: 0</a>
           <a href="cart.html" class="header-link header-cart full-cart">Корзина: 10</a>
@@ -137,7 +135,7 @@
               <ul class="catalog-list">
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
+                    <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                   </div>
                   <a href="catalog-item1.html" class="catalog-item-title">Перфоратор BOSCH BFG 3000</a>
                   <p class="catalog-item-price">
@@ -151,7 +149,7 @@
                 </li>
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
+                    <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                   </div>
                   <a href="catalog-item2.html" class="catalog-item-title">Перфоратор BOSCH BFG 6000</a>
                   <p class="catalog-item-price">
@@ -165,7 +163,7 @@
                 </li>
                 <li class="catalog-item catalog-new-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
+                    <img src="img/product-3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                   </div>
                   <a href="catalog-item3.html" class="catalog-item-title">Перфоратор BOSCH BFG 2000</a>
                   <p class="catalog-item-price">
@@ -179,7 +177,7 @@
                 </li>
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
+                    <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                   </div>
                   <a href="catalog-item1.html" class="catalog-item-title">Перфоратор BOSCH BFG 3000</a>
                   <p class="catalog-item-price">
@@ -193,7 +191,7 @@
                 </li>
                 <li class="catalog-item  catalog-new-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
+                    <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                   </div>
                   <a href="catalog-item2.html" class="catalog-item-title">Перфоратор BOSCH BFG 6000</a>
                   <p class="catalog-item-price">
@@ -207,7 +205,7 @@
                 </li>
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
+                    <img src="img/product-3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                   </div>
                   <a href="catalog-item3.html" class="catalog-item-title">Перфоратор BOSCH BFG 2000</a>
                   <p class="catalog-item-price">
@@ -221,7 +219,7 @@
                 </li> 
                 <li class="catalog-item catalog-new-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
+                    <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                   </div>
                   <a href="catalog-item1.html" class="catalog-item-title">Перфоратор BOSCH BFG 3000</a>
                   <p class="catalog-item-price">
@@ -235,7 +233,7 @@
                 </li>
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
+                    <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                   </div>
                   <a href="catalog-item2.html" class="catalog-item-title">Перфоратор BOSCH BFG 6000</a>
                   <p class="catalog-item-price">
@@ -249,7 +247,7 @@
                 </li>
                 <li class="catalog-item">
                   <div class="catalog-item-image">
-                    <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
+                    <img src="img/product-3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                   </div>
                   <a href="catalog-item3.html" class="catalog-item-title">Перфоратор BOSCH BFG 2000</a>
                   <p class="catalog-item-price">
@@ -283,7 +281,7 @@
     <footer  class="main-footer">
       <section class="footer-menu container">
         <a href="index.html" class="footer-logo">
-          <img src="img/logo.svg" width="136px" height="22px" alt="Логотип интернет-магазина «Техномарт»">
+          <img src="img/logo.svg" width="136" height="22" alt="Логотип интернет-магазина «Техномарт»">
         </a>
         <ul class="footer-top-nav">
           <li><a href="About.html">Компания</a></li>
@@ -309,9 +307,9 @@
           Все права защищены
           </p>
           <ul class="social">
-            <li><a class="social-item" href="#"><img src="img/vk-icon.svg" width="26px" height="15px" alt="Вконтакте"></a></li>
-            <li><a class="social-item" href="#"><img src="img/facebook-icon.svg" width="12px" height="22px" alt="Фэйсбук"></a></li>
-            <li><a class="social-item" href="#"><img src="img/instagram-icon.svg" width="21px" height="21px" alt="Инстаграм"></a></li>
+            <li><a class="social-item" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Вконтакте"></a></li>
+            <li><a class="social-item" href="#"><img src="img/facebook-icon.svg" width="12" height="22" alt="Фэйсбук"></a></li>
+            <li><a class="social-item" href="#"><img src="img/instagram-icon.svg" width="21" height="21" alt="Инстаграм"></a></li>
           </ul>
           <p class="footer-feedback">
           Обратная связь:<br> 
