--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section class="header-top-menu">
         <div class="header-top-content container">
           <a class="main-header-logo">
-            <img src="img/logo.svg" width="110px" height="17px" alt="Логотип интернет-магазина «Техномарт»">
+            <img src="img/logo.svg" width="110" height="17" alt="Логотип интернет-магазина «Техномарт»">
           </a>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
             <input type="search" name="search-form" placeholder="Поиск:">
@@ -109,7 +109,7 @@
         <ul class="catalog-list-popular">
           <li class="catalog-item">
             <div class="catalog-item-image">
-              <img src="img/product-10.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 9000">
+              <img src="img/product-10.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             </div>
             <a href="catalog-item10.html" class="catalog-item-title">Перфоратор BOSCH BFG 9000</a>
             <p class="catalog-item-price">
@@ -123,7 +123,7 @@
           </li>
           <li class="catalog-item">
             <div class="catalog-item-image">
-              <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 3000">
+              <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             </div>
             <a href="catalog-item1.html" class="catalog-item-title">Перфоратор BOSCH BFG 3000</a>
             <p class="catalog-item-price">
@@ -137,7 +137,7 @@
           </li>
           <li class="catalog-item">
             <div class="catalog-item-image">
-              <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 6000">
+              <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             </div>
             <a href="catalog-item2.html" class="catalog-item-title">Перфоратор BOSCH BFG 6000</a>
             <p class="catalog-item-price">
@@ -151,7 +151,7 @@
           </li>
           <li class="catalog-item catalog-new-item">
             <div class="catalog-item-image">
-              <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор BOSCH BFG 2000">
+              <img src="img/product-3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             </div>
             <a href="catalog-item3.html" class="catalog-item-title">Перфоратор BOSCH BFG 2000</a>
             <p class="catalog-item-price">
@@ -245,7 +245,7 @@
         <section class="contacts">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-          <a class="location-map" href="#"><img src="img/map.png" width="300px" height="158px" alt="Мы на карте"></a>
+          <a class="location-map" href="#"><img src="img/map.png" width="300" height="158" alt="Мы на карте"></a>
           <a class="botton show-write-us" href="Contacts.html">Заблудились? Напишите нам! </a>
         </section>
       </div>
@@ -253,7 +253,7 @@
     <footer  class="main-footer">
       <section class="footer-menu container">
         <a class="footer-logo">
-          <img src="img/logo.svg" width="136px" height="22px" alt="Логотип интернет-магазина «Техномарт»">
+          <img src="img/logo.svg" width="136" height="22" alt="Логотип интернет-магазина «Техномарт»">
         </a>
         <ul class="footer-top-nav">
           <li><a href="About.html">Компания</a></li>
@@ -279,9 +279,9 @@
           Все права защищены
           </p>
           <ul class="social">
-            <li><a class="social-item" href="#"><img src="img/vk-icon.svg" width="26px" height="15px" alt="Вконтакте"></a></li>
-            <li><a class="social-item" href="#"><img src="img/facebook-icon.svg" width="12px" height="22px" alt="Фэйсбук"></a></li>
-            <li><a class="social-item" href="#"><img src="img/instagram-icon.svg" width="21px" height="21px" alt="Инстаграм"></a></li>
+            <li><a class="social-item" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Вконтакте"></a></li>
+            <li><a class="social-item" href="#"><img src="img/facebook-icon.svg" width="12" height="22" alt="Фэйсбук"></a></li>
+            <li><a class="social-item" href="#"><img src="img/instagram-icon.svg" width="21" height="21" alt="Инстаграм"></a></li>
           </ul>
           <p class="footer-feedback">
           Обратная связь:<br>
@@ -295,7 +295,7 @@
       </div>
     </footer>
       <section class="modal modal-map">
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A440715fdce038695a403d18afd56cfa7c46f513d68e0a40df8e4c785680ed8e7&amp;source=constructor" width="940" height="446" frameborder="0"></iframe>
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A440715fdce038695a403d18afd56cfa7c46f513d68e0a40df8e4c785680ed8e7&amp;source=constructor" width="940" height="446" class="border0"></iframe>
         <div>
           <img src="img/big_map.png" width="940" height="446" alt="Вы можете нас найти по адресу: г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8">
         </div>
